# pointcloud_saver

./: CMakeLists.txt  README.md  package.xml
launch/: PointCloudSaver.launch  openni.launch
src/: pointcloud_saver_node.cpp  pointcloud_saver_node.cpp_bak
