<?xml version="1.0"?>
<package>
  <name>pointcloud_saver</name>
  <version>0.1.0</version>
  <description>Saves point clouds in pcd after applying the transformation</description>
  <maintainer email="mathieuglefebvre@gmail.com">Mathieu Gascon-Lefebvre</maintainer>
  <license>GPLv3</license>
  <author email="mathieuglefebvre@gmail.com">Mathieu Gascon-Lefebvre</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>